<resources>
    <string name="app_name">Ejercicio05_LinearLayout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="conexion">Conexión</string>
    <string name="usuario">Usuario</string>
    <string name="hintTxtUsuario">Nombre</string>
    <string name="clave">Clave</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
</resources>
