<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/lblConexion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaLblConexion"
        android:textSize="@dimen/tamanioTextoLblConexion"
        android:text="@string/conexion"/>
    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:paddingLeft="@dimen/rellenoIzqlblUsuClave"/>
    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintTxtUsuario"/>
    <TextView
        android:id="@+id/lblClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clave"
        android:paddingLeft="@dimen/rellenoIzqlblUsuClave"/>
    <EditText
        android:id="@+id/txtClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/clave"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_marginTop="@dimen/margenSupBoton"
            android:layout_marginLeft="@dimen/margenIzqBoton"/>
        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:layout_marginTop="@dimen/margenSupBoton"
            android:layout_marginLeft="@dimen/margenIzqBoton"/>
    </LinearLayout>
</LinearLayout>
